2011-xx-xx:
    * version 3.1
    * Add 'apptab' option for pin/unpin the current tab.
    * Bug fixes

2011-03-06:
    * version 3.0
    * IMPORTANT: The statusbar and command line have been merged in a single
      row as also Firefox 4 hides the statusbar by default now
    * IMPORTANT: By default, we don't change Firefox's default UI anymore!
      This was done since Firefox 4 has indeed a very minimal GUI and the Firefox
      navigation toolbar (with small icons) uses hardly more space than our old status line, but
      provides so much more (easy bookmarking, better security information, ...)
    * IMPORTANT: 'guioptions' and 'showtabline' have been removed in favor of
      'toolbars', 'scrollbars' and 'tabnumbers' options!
    * IMPORTANT: Removed 'laststatus' option but add a 'status' option in contrast
      to decide which elements are shown in the new style status bar
    * IMPORTANT: Support for configurable hint characters; This basically brings back the old
      hint behavior for those who prefer it. See the 'hintchars' option. Patch by caisui
    * IMPORTANT: 'wildoptions' option was removed. Completions are sorted automatically now,
      and 'autocomplete' is the new option for the removed 'wildoptions=auto'
    * IMPORTANT: We automatically list completions as you type now. If you have a slow computer,
      you might want to :set noautocomplete
    * IMPORTANT: Tab numbers can now be set with :set [no]tabnumbers. Also made them
      work much more reliable in Firefox4 - especially in combination with other tab related
      addons like TabMixPlus
    * IMPORTANT: We do not beep on unrecognized mappings anymore, to make it easier to just
      use Firefox mappings if the user wants them
    * IMPORTANT: Removed :redraw and Ctrl-l as it just doesn't make sense to have that feature
    * IMPORTANT: 'jsdebugger' option was removed, as JS completion should work much better
      out of the box now.