@@ -1,6 +1,9 @@
 2011-xx-xx:
     * version 3.1
+    * No longer show the command after executing an ex command. Just
+      fade out quickly now and make room for the status items.
     * Add 'apptab' option for pin/unpin the current tab.
+    * Add 'messagetimeout' option to automatically hide messages after a timeout
     * Bug fixes
 
 2011-03-06:
